--- a/Client Web/Autres/tarifs.html
+++ b/Client Web/Autres/tarifs.html
@@ -5,16 +5,283 @@
 	</div>
 </div>
 <hr />
-<p><img src="images/Images_Articles/Tarifs/Tarfis_poles_aquatiques_sb.png" alt="Tarfis poles aquatiques sb" class="img-fluid" /> <img src="images/Images_Articles/Tarifs/Tarifs_poles_aquatiques_bnssa.png" alt="Tarifs poles aquatiques bnssa" class="img-fluid" /> <img src="images/Images_Articles/Tarifs/Tarfis_poles_sauvetage.png" alt="Tarfis poles sauvetage" class="img-fluid" /> <img src="images/Images_Articles/Tarifs/Tarifs_poles_formations.png" alt="Tarifs poles formations" class="img-fluid" /></p>
-<p>Les tarifs sont t&eacute;l&eacute;chargeables :</p>
-<div class="row text-center">
-	<div class="col-sm-12 col-md-12">
-		<a href="images/Tarifs_2017_2018.pdf" target="_blank">
-			<div class="card">
-				<div class="card-body"><em class="fas fa-file text-warning" style="font-size: 45px;"></em>
-					<p class="text-warning">Tarifs 2017-2018</p>
+<div class="btn-group d-flex justify-content-center"><a href="#pole_aquatique" class="btn btn-info w-100">Pole Aquatique</a><a href="#pole_formation" class="btn btn-danger w-100">Pole Formation</a><a href="#pole_sportif" class="btn btn-success w-100">Pole Sportif</a></div>
+<hr />
+<div class="alert alert-danger" role="alert">
+  <h4 class="alert-heading"></h4>
+  <p><span class="font-weight-bold">Remarque :</span>Tous les prix suivis par une * ne prennent pas en compte <span class="font-weight-bold">adhesion obligatoire</span> à la licence de <span class="font-weight-bold">20€</span></p>
+  <p class="mb-0"></p>
+</div>
+<hr />
+<h4 class="text-info" id="pole_aquatique"><u>Pole Aquatique</u></h4>
+<h5 class="text-info">Formation initiale BNSSA</h5>
+<div class="container-fluid content-row">
+	<div class="row text-center mb-4 text-white">
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-info">
+					<h2>BNSSA</h2>
+					<p class="font-weight-bold" style="margin-top: -5px;">Formation Aquatique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation Théorique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">&nbsp;</p>
+					<h2 class="bg-white text-info">240 €*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 €</p>
 				</div>
 			</div>
-		</a>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-info">
+					<h2>BNSSA + PSE1</h2>
+					<p class="font-weight-bold" style="margin-top: -5px;">Formation Aquatique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation Théorique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation PSE1 35h</p>
+					<h2 class="bg-white text-info">440 €*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 €</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-info">
+					<h2>BNSSA UFR STAPS</h2>
+					<p class="font-weight-bold" style="margin-top: -5px;">Formation Aquatique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation Théorique</p>
+					<p style="margin-top: -20px;">sur présentation d'un justificatif</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">&nbsp;</p>
+					<h2 class="bg-white text-info">180 €</h2>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-info">
+					<h2>BNSSA + PSE1 + PSE2</h2>
+					<p class="font-weight-bold" style="margin-top: -5px;">Formation Aquatique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation Théorique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation PSE1 35h</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation PSE2 28h</p>
+					<h2 class="bg-white text-info">660 €*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 €</p>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
+<h5 class="text-info">Recyclage BNSSA</h5>
+<div class="container-fluid content-row">
+	<div class="row text-center mb-4 text-white">
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-info">
+					<h2>Recyclage BNSSA</h2>
+					<p class="font-weight-bold" style="margin-top: -5px;">Formation Aquatique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">&nbsp;</p>
+					<h2 class="bg-white text-info">150 €*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 €</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-info">
+					<h2>Recyclage BNSSA + Secourisme</h2>
+					<p class="font-weight-bold" style="margin-top: -5px;">Formation Aquatique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation PSE1 ou PSE2 7h30</p>
+					<h2 class="bg-white text-info">180 €*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 €</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<h5 class="text-info">Formation initiale Surveillant de Baignade</h5>
+<div class="container-fluid content-row">
+	<div class="row text-center mb-4 text-white">
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-info">
+					<h2>Surveillant de Baignade</h2>
+					<p class="font-weight-bold" style="margin-top: -5px;">Formation Aquatique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation Réglementation</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">&nbsp;</p>
+					<h2 class="bg-white text-info">160 €*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 €</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-info">
+					<h2>Surveillant de Baignade + PSC1 + Complement SB</h2>
+					<p class="font-weight-bold" style="margin-top: -5px;">Formation Aquatique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation Réglementation</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation PSC1 7h</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Extension SB 3h</p>
+					<h2 class="bg-white text-info">220 €*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 €</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<h5 class="text-info">Recyclage Surveillant Baignade</h5>
+<div class="container-fluid content-row">
+	<div class="row text-center mb-4 text-white">
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-info">
+					<h2>Surveillant Baignade</h2>
+					<p class="font-weight-bold" style="margin-top: -5px;">Formation Aquatique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">&nbsp;</p>
+					<h2 class="bg-white text-info">110 €*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 €</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-info">
+					<h2>Surveillant Baignade + Secourisme</h2>
+					<p class="font-weight-bold" style="margin-top: -5px;">Formation Aquatique</p>
+					<p class="font-weight-bold" style="margin-top: -20px;">Formation PSC1 7h30</p>
+					<h2 class="bg-white text-info">120 €*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 €</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<hr />
+<h4 class="text-danger" id="pole_formation"><u>Pole Formation</u></h4>
+<h5 class="text-danger">Formation Intiale</h5>
+<div class="container-fluid content-row">
+	<div class="row text-center mb-4 text-white">
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-danger">
+					<h2>PSC1</h2>
+					<p class="font-weight-bold" style="margin-top: -10px;">Formation Théorique</p>
+					<h2 class="bg-white text-danger">40 €*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 €</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-danger">
+					<h2>PSE1</h2>
+					<p class="font-weight-bold" style="margin-top: -10px;">Formation Théorique</p>
+					<h2 class="bg-white text-danger">220 €*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 €</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-danger">
+					<h2>PSE2</h2>
+					<p class="font-weight-bold" style="margin-top: -10px;">Formation Théorique</p>
+					<h2 class="bg-white text-danger">250 €*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 €</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-6 col-md-6 mb-4">
+			<div class="card h-100">
+				<div class="card-body bg-danger">
+					<h2>PSE1 + PSE2</h2>
+					<p class="font-weight-bold" style="margin-top: -10px;">Formation Théorique</p>
+					<h2 class="bg-white text-danger">450 €*</h2>
+					<p class="font-weight-bold">+ licence FFSS 20 €</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<h5 class="text-danger">Formation Continue</h5>
+<div class="container-fluid content-row">
+		<div class="row text-center mb-4 text-white">
+			<div class="col-sm-6 col-md-6 mb-4">
+				<div class="card h-100">
+					<div class="card-body bg-danger">
+						<h2>Formation Continue PSC1</h2>
+						<p class="font-weight-bold" style="margin-top: -10px;">Formation Théorique</p>
+						<h2 class="bg-white text-danger">20 €*</h2>
+						<p class="font-weight-bold">+ licence FFSS 20 €</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-6 mb-4">
+				<div class="card h-100">
+					<div class="card-body bg-danger">
+						<h2>Formation Continue PSE1</h2>
+						<p class="font-weight-bold" style="margin-top: -10px;">Formation Théorique</p>
+						<h2 class="bg-white text-danger">30 €*</h2>
+						<p class="font-weight-bold">+ licence FFSS 20 €</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-6 mb-4">
+				<div class="card h-100">
+					<div class="card-body bg-danger">
+						<h2>Formation Continue PSE2</h2>
+						<p class="font-weight-bold" style="margin-top: -10px;">Formation Théorique</p>
+						<h2 class="bg-white text-danger">30 €*</h2>
+						<p class="font-weight-bold">+ licence FFSS 20 €</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-6 mb-4">
+				<div class="card h-100">
+					<div class="card-body bg-danger">
+						<h2>Monitorat Premier Secours</h2>
+						<p class="font-weight-bold" style="margin-top: -10px;">Formation Théorique</p>
+						<h2 class="bg-white text-danger">560 €*</h2>
+						<p class="font-weight-bold">+ licence FFSS 20 €</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<h5 class="text-danger">Formation Etablissement</h5>
+	<div class="container-fluid content-row">
+		<div class="row text-center mb-4 text-white">
+			<div class="col-sm-6 col-md-6 mb-4">
+				<div class="card h-100">
+					<div class="card-body bg-danger">
+						<h2>Formation College</h2>
+						<p class="font-weight-bold" style="margin-top: -10px;">Adhésion + Livret de Formation</p>
+						<h2 class="bg-white text-danger">40 €</h2>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-6 mb-4">
+				<div class="card h-100">
+					<div class="card-body bg-danger">
+						<h2>Formation Lycée</h2>
+						<p class="font-weight-bold" style="margin-top: -10px;">Adhésion, Sans Livret de Formation</p>
+						<h2 class="bg-white text-danger">50 €</h2>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<hr/>
+	<h4 class="text-success" id="pole_sportif">Pole Sportif</h4>
+	<div class="container-fluid content-row">
+		<div class="row text-center mb-4 text-white">
+			<div class="col-sm-12 col-md-12 mb-4">
+				<div class="card h-100">
+					<div class="card-body bg-success">
+						<h2>Sauvetage Sportif</h2>
+						<p class="font-weight-bold" style="margin-top: -10px;">Entrainements</p>
+						<p class="font-weight-bold" style="margin-top: -10px;">Préparation Physique Générale</p>
+						<h2 class="bg-white text-success">240 €*</h2>
+						<p class="font-weight-bold">+ licence FFSS 20 €</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
