--- a/Client Web/Infos utiles/Contact.html
+++ b/Client Web/Infos utiles/Contact.html
@@ -72,4 +72,13 @@
 			</div>
 		</div>
 	</div>
+	<div class="col-sm-6 col-md-4">
+		<div class="card" style="height: 12rem;">
+			<div class="card-body"><em class="fas fa-at text-warning" style="font-size: 45px;"></em>
+				<h6>Communication</h6>
+				<p style="margin-top: -5px;">Cyril CROZES</p>
+				<p style="margin-top: -25px;">communication.cst31@gmail.com</p>
+			</div>
+		</div>
+	</div>
 </div>
