--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -5,11 +5,15 @@
 <hr />
 <div id="Autre_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px; line-height: 80%; color: #343a40;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; background-color: #ffc107;">Vie du Club :</h3>
-	<p class="center" style="font-size: 13pt;">L'Assemblée Générale annuelle :</p>
-	<p class="center" style="font-size: 13pt; font-weight: bold;">Mercredi 19 Septembre 2018</p>
-	<p class="center" style="font-size: 12pt;">à partir de 20h</p>
-	<p class="center" style="font-size: 12pt;">Salle de formation (sous les tribunes), Allée des Sports 31520 Ramonville-Saint-Agne</p>
-	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d722.9548469051008!2d1.4800618881695604!3d43.547806670721315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aebe80e924ff91%3A0x87ad1eb92a385b8a!2sAll%C3%A9e+des+Sports%2C+31520+Ramonville-Saint-Agne!5e0!3m2!1sfr!2sfr!4v1535528687229" width="100%" height="200" style="margin: 5px;" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+	<p class="center font-weight-bold" style="font-size: 14pt;">Post Assemblée Générale :</p>
+	<p class="center" style="font-size: 13pt; line-height:20px;">Vous trouverez les nouveaux tarif dans l'onglet <a class="text-warning" href="http://www.clubdesauvetagetoulousain.org/index.php/tarifs" target="_blank">Tarif</a></p>
+	<p class="center" style="font-size: 13pt; line-height:20px;">Vous trouverez les nouveaux horraires pour le BNSSA dans l'onglet <a class="text-warning" href="http://www.clubdesauvetagetoulousain.org/index.php/formation-aquatique/bnssa#Horraires" target="_blank">Formation Aquatique - BNSSA</a></p>
+	<p class="center" style="font-size: 13pt; line-height:20px;">Vous trouverez les nouveaux horraires pour le Sauvetage Sportif dans l'onglet <a class="text-warning" href="http://www.clubdesauvetagetoulousain.org/index.php/sauvetage-sportif/les-groupes-d-entrainements#Horraires" target="_blank">Sauvetage Sportif - Les groupes d'entrainements</a></p>
+	<hr/>
+	<p class="center font-weight-bold" style="font-size: 14pt;">Devenir Juges et Arbitre :</p>
+	<p class="center" style="font-size: 13pt; line-height:20px;">Notre club recherche tout au long de l'année des juges et arbitres afin d'encadrer les compétitions de nos nageurs.</p>
+	<p class="center" style="font-size: 13pt;">En effet si le club ne fournit pas de juges il sera alors penalisé d'une amande</p>
+	<p class="center" style="font-size: 13pt; font-weight: bold; line-height:20px;">Aider votre club en devenant arbitres !<br/><a href="mailto:cstsecretariat@live.fr" class="center text-warning" style="font-size: 12pt;">Pour plus d'information contactez nous</a></p>
 </div>
 <hr />
 <div id="Dps_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px;">
@@ -29,24 +33,14 @@
 				<td colspan="4" style="margin: auto; text-align: center; font-size: 12pt; font-weight: bold; text-decoration: underline;">Saison 2018 - 2019</td>
 			</tr>
 			<tr>
-				<th scope="row">LIDL Star Ligue - Fénix vs Chambéry</th>
-				<td>Toulouse - Palais des Sports</td>
-				<td>05-09-2018</td>
-			</tr>
-			<tr>
-				<th scope="row">Vitalsport Décathlon Escalquens</th>
-				<td>Escalquens - Décathlon</td>
-				<td>08/09-09-2018</td>
-			</tr>
-			<tr>
-				<th scope="row">Fête Locale Escalquens</th>
-				<td>Escalquens</td>
-				<td>14/15/16-09-2018</td>
-			</tr>
-			<tr>
 				<th scope="row">Sports au féminin</th>
 				<td>La Ramée</td>
 				<td>22-09-2018</td>
+			</tr>
+			<tr>
+				<th scope="row">LIDL Star Ligue - Fénix vs Tremblay</th>
+				<td>Palais des sports</td>
+				<td>26-09-2018</td>
 			</tr>
 			<tr>
 				<th scope="row">Bouge ton Campus</th>
@@ -57,6 +51,21 @@
 				<th scope="row">Les Courbes du 31</th>
 				<td>Auzielle</td>
 				<td>07-10-2018</td>
+			</tr>
+			<tr>
+				<th scope="row">Bourse aux jouets et aux livres</th>
+				<td>Labege</td>
+				<td>02-12-2018</td>
+			</tr>
+			<tr>
+				<th scope="row">LIDL Star Ligue - Fénix vs Pontault</th>
+				<td>Palais des sports</td>
+				<td>19-12-2018</td>
+			</tr>
+			<tr>
+				<th scope="row">LIDL Star Ligue - Fénix vs Cesson</th>
+				<td>Palais des sports</td>
+				<td>27-02-2018</td>
 			</tr>
 		</tbody>
 	</table>
