--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -5,25 +5,31 @@
 <hr />
 <div id="Autre_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px; line-height: 80%; color: #343a40;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; background-color: #ffc107;">Vie du Club :</h3>
-	<p class="center font-weight-bold" style="font-size: 14pt;">Post Assemblée Générale :</p>
-	<p class="center" style="font-size: 13pt; line-height:20px;">Vous trouverez les nouveaux tarif dans l'onglet <a class="text-warning" href="http://www.clubdesauvetagetoulousain.org/index.php/tarifs" target="_blank">Tarif</a></p>
-	<p class="center" style="font-size: 13pt; line-height:20px;">Vous trouverez les nouveaux horraires pour le BNSSA dans l'onglet <a class="text-warning" href="http://www.clubdesauvetagetoulousain.org/index.php/formation-aquatique/bnssa#Horraires" target="_blank">Formation Aquatique - BNSSA</a></p>
-	<p class="center" style="font-size: 13pt; line-height:20px;">Vous trouverez les nouveaux horraires pour le Sauvetage Sportif dans l'onglet <a class="text-warning" href="http://www.clubdesauvetagetoulousain.org/index.php/sauvetage-sportif/les-groupes-d-entrainements#Horraires" target="_blank">Sauvetage Sportif - Les groupes d'entrainements</a></p>
-	<hr/>
+	<p class="center font-weight-bold" style="font-size: 14pt;">Réunions Pré-Entrainement d'Informations :</p>
+	<p class="center" style="font-size: 13pt; line-height: 20px;">Attention le certificat médicat sera obligatoire pour accéder au bassin</p>
+	<p class="center" style="font-size: 13pt; line-height: 20px;">Piscine Pech David</p>
+	<p class="center" style="font-size: 13pt; line-height: 20px;">Mardi 25 Septembre - BNSSA</p>
+	<p class="center" style="font-size: 13pt; line-height: 20px;">Mercredi 26 Septembre - Sportif</p>
+	<hr />
+	<p class="center font-weight-bold" style="font-size: 14pt;">Post Assembl&eacute;e G&eacute;n&eacute;rale :</p>
+	<p class="center" style="font-size: 13pt; line-height: 20px;">Vous trouverez les nouveaux tarif dans l'onglet <a href="index.php/tarifs" target="_blank" class="text-warning">Tarif</a></p>
+	<p class="center" style="font-size: 13pt; line-height: 20px;">Vous trouverez les nouveaux horraires pour le BNSSA dans l'onglet <a href="index.php/formation-aquatique/bnssa#Horraires" target="_blank" class="text-warning">Formation Aquatique - BNSSA</a></p>
+	<p class="center" style="font-size: 13pt; line-height: 20px;">Vous trouverez les nouveaux horraires pour le Sauvetage Sportif dans l'onglet <a href="index.php/sauvetage-sportif/les-groupes-d-entrainements#Horraires" target="_blank" class="text-warning">Sauvetage Sportif - Les groupes d'entrainements</a></p>
+	<hr />
 	<p class="center font-weight-bold" style="font-size: 14pt;">Devenir Juges et Arbitre :</p>
-	<p class="center" style="font-size: 13pt; line-height:20px;">Notre club recherche tout au long de l'année des juges et arbitres afin d'encadrer les compétitions de nos nageurs.</p>
-	<p class="center" style="font-size: 13pt;">En effet si le club ne fournit pas de juges il sera alors penalisé d'une amande</p>
-	<p class="center" style="font-size: 13pt; font-weight: bold; line-height:20px;">Aider votre club en devenant arbitres !<br/><a href="mailto:cstsecretariat@live.fr" class="center text-warning" style="font-size: 12pt;">Pour plus d'information contactez nous</a></p>
+	<p class="center" style="font-size: 13pt; line-height: 20px;">Notre club recherche tout au long de l'ann&eacute;e des juges et arbitres afin d'encadrer les comp&eacute;titions de nos nageurs.</p>
+	<p class="center" style="font-size: 13pt;">En effet si le club ne fournit pas de juges il sera alors penalis&eacute; d'une amande</p>
+	<p class="center" style="font-size: 13pt; font-weight: bold; line-height: 20px;">Aider votre club en devenant arbitres !<br /><a href="mailto:cstsecretariat@live.fr" class="center text-warning" style="font-size: 12pt;">Pour plus d'information contactez nous</a></p>
 </div>
 <hr />
 <div id="Dps_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px;">
-	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #337ab7;">DPS à venir :</h3>
-	<p class="center" style="font-size: 12pt; color: #337ab7;">Pour les inscriptions (Licenciés uniquement - Compte EOS obligatoire) : <a href="https://eos.ffss.fr" style="decoration-text: none; color: #333399; font-weight: bold;">Cliquez-ici</a></p>
+	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #337ab7;">DPS &agrave; venir :</h3>
+	<p class="center" style="font-size: 12pt; color: #337ab7;">Pour les inscriptions (Licenci&eacute;s uniquement - Compte EOS obligatoire) : <a href="https://eos.ffss.fr" style="decoration-text: none; color: #333399; font-weight: bold;">Cliquez-ici</a></p>
 	<hr />
 	<table class="table table-striped">
 		<thead>
 			<tr>
-				<th scope="col">Activité</th>
+				<th scope="col">Activit&eacute;</th>
 				<th scope="col">Lieu</th>
 				<th scope="col">Date</th>
 			</tr>
@@ -33,12 +39,12 @@
 				<td colspan="4" style="margin: auto; text-align: center; font-size: 12pt; font-weight: bold; text-decoration: underline;">Saison 2018 - 2019</td>
 			</tr>
 			<tr>
-				<th scope="row">Sports au féminin</th>
-				<td>La Ramée</td>
+				<th scope="row">Sports au f&eacute;minin</th>
+				<td>La Ram&eacute;e</td>
 				<td>22-09-2018</td>
 			</tr>
 			<tr>
-				<th scope="row">LIDL Star Ligue - Fénix vs Tremblay</th>
+				<th scope="row">LIDL Star Ligue - F&eacute;nix vs Tremblay</th>
 				<td>Palais des sports</td>
 				<td>26-09-2018</td>
 			</tr>
@@ -58,12 +64,12 @@
 				<td>02-12-2018</td>
 			</tr>
 			<tr>
-				<th scope="row">LIDL Star Ligue - Fénix vs Pontault</th>
+				<th scope="row">LIDL Star Ligue - F&eacute;nix vs Pontault</th>
 				<td>Palais des sports</td>
 				<td>19-12-2018</td>
 			</tr>
 			<tr>
-				<th scope="row">LIDL Star Ligue - Fénix vs Cesson</th>
+				<th scope="row">LIDL Star Ligue - F&eacute;nix vs Cesson</th>
 				<td>Palais des sports</td>
 				<td>27-02-2018</td>
 			</tr>
@@ -73,15 +79,15 @@
 <hr />
 <div id="Formation_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #d9534f;">Formations Secourisme des prochains mois :</h3>
-	<p style="font-size: 12pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Les inscritions se font en cliquant sur le calendrier ci-contre à la date et l'évènement voulu.</p>
-	<p style="font-size: 10pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Toutes nos dates ne sont pas reprises ci-dessous nous vous invitons à consulter le calendrier ci-contre.</p>
+	<p style="font-size: 12pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Les inscritions se font en cliquant sur le calendrier ci-contre &agrave; la date et l'&eacute;v&egrave;nement voulu.</p>
+	<p style="font-size: 10pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Toutes nos dates ne sont pas reprises ci-dessous nous vous invitons &agrave; consulter le calendrier ci-contre.</p>
 	<hr />
 	<!-- <span class="label label-warning">En Cours</span> -->
 	<table class="table table-striped" style="margin-left: auto; margin-right: auto;">
 		<thead>
 			<tr>
 				<th scope="col">Formation</th>
-				<th scope="col"></th>
+				<th scope="col">&nbsp;</th>
 				<th scope="col">Lieu</th>
 				<th scope="col">Date</th>
 			</tr>
@@ -162,7 +168,7 @@
 <hr />
 <div id="Sauvetage_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #449d44;">Sauvetage Sportif :</h3>
-	<p class="center" style="color: #449d44; font-size: 12pt;">Les résultats des compétitions de la saison 2017 - 2018 disponnibles<a href="index.php?option=com_content&view=article&id=27:actualites&catid=2:non-categorise" style="text-decoration: none; font-weight: bold; color: #339966;">ICI</a></p>
+	<p class="center" style="color: #449d44; font-size: 12pt;">Les r&eacute;sultats des comp&eacute;titions de la saison 2017 - 2018 disponnibles <a href="index.php?option=com_content&amp;view=article&amp;id=27:actualites&amp;catid=2:non-categorise" style="text-decoration: none; font-weight: bold; color: #339966;">ICI</a></p>
 	<p class="center" style="color: #343a40; font-size: 12pt;">Reprise des entrainements le :</p>
 	<p class="center" style="color: #343a40; ; font-size: 13pt; font-weight: bold;">Lundi 1 Octobre 2018</p>
 </div>
@@ -184,7 +190,7 @@
 			<div class="col-md-4 d-flex align-items-stretch">
 				<div class="card">
 					<div class="card-body text-center"><em class="fas fa-ambulance text-danger" style="font-size: 45px;"></em>
-						<p></p>
+						<p>&nbsp;</p>
 						<p>Venez apprendre les gestes qui sauvent</p>
 					</div>
 				</div>
@@ -192,14 +198,14 @@
 			<div class="col-md-4 d-flex align-items-stretch">
 				<div class="card">
 					<div class="card-body text-center"><em class="fas fa-hand-holding-heart text-info" style="font-size: 45px;"></em>
-						<p>Venez mettre à profit vos compétences de secouriste et/ou de sauveteur au sein de nos équipes sur les postes de secours.</p>
+						<p>Venez mettre &agrave; profit vos comp&eacute;tences de secouriste et/ou de sauveteur au sein de nos &eacute;quipes sur les postes de secours.</p>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-4 d-flex align-items-stretch">
 				<div class="card">
 					<div class="card-body text-center"><em class="fas fa-tint text-primary" style="font-size: 45px;"></em>
-						<p></p>
+						<p>&nbsp;</p>
 						<p>Venez vous former au sauvetage aquatique,</p>
 					</div>
 				</div>
@@ -219,7 +225,7 @@
 	</div>
 </div>
 <hr />
-<a class="center" href="https://www.facebook.com/clubdesauvetagetoulousain/" style="color: #3b5998; padding-bottom: 10px;" target="_blank"><h3>Notre FACEBOOK</h3></a>
+<h3>Notre FACEBOOK</h3>
 <p>
-	<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fclubdesauvetagetoulousain%2F&tabs=timeline&width=500&height=800&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="500" class="rounded" style="border: none; overflow: hidden; display: block; margin-left: auto; margin-right: auto; margin-bottom: 12px;" frameborder="0" scrolling="no"></iframe>
+	<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fclubdesauvetagetoulousain%2F&amp;tabs=timeline&amp;width=500&amp;height=800&amp;small_header=false&amp;adapt_container_width=true&amp;hide_cover=false&amp;show_facepile=true&amp;appId" width="500" height="500" class="rounded" style="border: none; overflow: hidden; display: block; margin-left: auto; margin-right: auto; margin-bottom: 12px;" frameborder="0" scrolling="no"></iframe>
 </p>
