--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -5,14 +5,8 @@
 <hr />
 <div id="Autre_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px; line-height: 80%; color: #343a40;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; background-color: #ffc107;">Vie du Club :</h3>
-	<p class="center font-weight-bold" style="font-size: 14pt;">Réunions Pré-Entrainement d'Informations :</p>
-	<p class="center" style="font-size: 13pt; line-height: 20px;">Attention le certificat médicat sera obligatoire pour accéder au bassin</p>
-	<p class="center" style="font-size: 13pt; line-height: 20px;">Piscine Pech David</p>
-	<p class="center" style="font-size: 13pt; line-height: 20px;">Mardi 25 Septembre - BNSSA</p>
-	<p class="center" style="font-size: 13pt; line-height: 20px;">Mercredi 26 Septembre - Sportif</p>
-	<hr />
 	<p class="center font-weight-bold" style="font-size: 14pt;">Post Assembl&eacute;e G&eacute;n&eacute;rale :</p>
-	<p class="center" style="font-size: 13pt; line-height: 20px;">Vous trouverez les nouveaux tarif dans l'onglet <a href="index.php/tarifs" target="_blank" class="text-warning">Tarif</a></p>
+	<p class="center" style="font-size: 13pt; line-height: 20px;">Vous trouverez les nouveaux tarif dans l'onglet <a href="index.php/tarifs" target="_blank" class="text-warning">TARIFS</a></p>
 	<p class="center" style="font-size: 13pt; line-height: 20px;">Vous trouverez les nouveaux horraires pour le BNSSA dans l'onglet <a href="index.php/formation-aquatique/bnssa#Horraires" target="_blank" class="text-warning">Formation Aquatique - BNSSA</a></p>
 	<p class="center" style="font-size: 13pt; line-height: 20px;">Vous trouverez les nouveaux horraires pour le Sauvetage Sportif dans l'onglet <a href="index.php/sauvetage-sportif/les-groupes-d-entrainements#Horraires" target="_blank" class="text-warning">Sauvetage Sportif - Les groupes d'entrainements</a></p>
 	<hr />
@@ -139,7 +133,7 @@
 				<td>02-12-2018</td>
 			</tr>
 			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSC1</span></th>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation Continue PSE1 / PSE2</span></th>
 				<td style="margin: auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
 				<td>Ramonville</td>
 				<td>22-12-2018</td>
